<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="top"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            style="@style/cardMain"
            android:id="@+id/about"
            android:clickable="true"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            >
            <LinearLayout
                style="@style/cardContent"
                android:orientation="vertical">

                <ImageView
                    style="@style/icoCard"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    style="@style/Title.cardView"
                    android:text="@string/tv_about" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            style="@style/cardMain"
            android:clickable="true"
            android:id="@+id/raspisanie"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp">

            <LinearLayout
                style="@style/cardContent"
                android:orientation="vertical">

                <ImageView
                    style="@style/icoCard"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    style="@style/Title.cardView"
                    android:text="@string/name_timetable" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/cardMain"
            android:id="@+id/forPalmers"
            android:clickable="true"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp">

            <LinearLayout
                style="@style/cardContent"
                android:orientation="vertical">

                <ImageView
                    style="@style/icoCard"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    style="@style/Title.cardView"
                    android:text="@string/name_palmers" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="top"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            style="@style/cardMain"
            android:clickable="true"
            android:id="@+id/forNovos"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp">

            <LinearLayout
                style="@style/cardContent"
                android:orientation="vertical">

                <ImageView
                    style="@style/icoCard"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    style="@style/Title.cardView"
                    android:text="@string/name_novos" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            style="@style/cardMain"
            android:clickable="true"
            android:id="@+id/pominoveniya"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp">

            <LinearLayout
                style="@style/cardContent"
                android:orientation="vertical">

                <ImageView
                    style="@style/icoCard"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    style="@style/Title.cardView"
                    android:text="@string/name_pominoveniya" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/cardMain"
            android:clickable="true"
            android:id="@+id/contacts"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp">

            <LinearLayout
                style="@style/cardContent"
                android:orientation="vertical">

                <ImageView
                    style="@style/icoCard"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    style="@style/Title.cardView"
                    android:text="@string/name_contacts" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>